updates to google daily maps, and added kml files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Two Travelling Souls
+title: Two Travellers
 scripts:
 - /js/maps.js
 ---
@@ -19,7 +19,7 @@ scripts:
 				<div class="author">by {{page.author}}</div>
 			{% endif %}
 			{% if page.kml %}
-				<div class="map bw" onclick="map(this,'{{page.kml}}')"></div>
+			<div class="map bw" onclick="mapt(this,'{{page.kml}}')"></div>
 			{% endif %}
 		</div>
 		<div class="content">
