minor updates and typo fix in blog entry

--- a/trips.html
+++ b/trips.html
@@ -2,6 +2,13 @@
 layout: default
 title: Trips We've Taken 
 ---
+<h1>Trips We've Taken</h1>
+<h2>2010</h2>
+<ul>
+	<li>Trip 1</li>
+	<li>Trip 2</li>
+</ul>
+<h2>2009</h2>
 <ul>
 	<li>Trip 1</li>
 	<li>Trip 2</li>
