--- a/index.html
+++ b/index.html
@@ -10,23 +10,7 @@ scripts:
 	});
 </script>
 {% for page in paginator.posts %}
-	<div class='post'>
-		<h2><a href="{{page.url}}">{{page.title}}</a></h2>
-
-		<div class="data">
-			{% if page.kml %}
-				<div class="map" onclick="mapt(this,'{{page.kml}}')"></div>
-			{% endif %}
-
-			<div class="date">{{page.date | date: "%h %d, %Y"}}</div>
-			{% if page.author %}
-				<div class="author">by {{page.author}}</div>
-			{% endif %}
-		</div>
-		<div class="content">
-			{{page.content}}
-		</div>
-	</div>
+	{% include single_post.html %}
 {% endfor %}
 
 <div class="pagination">
