work to make categories into a trip list

--- a/trips.html
+++ b/trips.html
@@ -2,14 +2,17 @@
 layout: default
 title: Trips We've Taken 
 ---
-<h1>Trips We've Taken</h1>
-<h2>2010</h2>
-<ul>
-	<li>Trip 1</li>
-	<li>Trip 2</li>
-</ul>
-<h2>2009</h2>
-<ul>
-	<li>Trip 1</li>
-	<li>Trip 2</li>
+<!--
+{% for page in site.categories.NYC-Barefoot-Run-2010 %}
+<p>{{page.title}}</p>
+{% endfor %}
+-->
+
+<h1>Our Trips</h1>
+
+<h2 class="year">2010</h2>
+<ul class="triplist">
+	<li><a href="">New Years in Spain</a></li>
+	<li><a href="">2,500th Anniversary Athens Marathon</a></li>
+	<li><a href="">NYC First Ever Barefoot Run</a></li>
 </ul>
