--- a/trips/index.html
+++ b/trips/index.html
@@ -9,6 +9,6 @@ title: Trips We've Taken
 	<li>
 	<a href="/trips/NYC Barefoot Run/">
 		<img src="http://farm5.static.flickr.com/4112/5073219907_162a6e7146_s.jpg">
-		<div>NYC First Ever Barefoot Run</div></a>
+		<div>First Ever NYC Barefoot Run</div></a>
 	</li>
 </ul>
