--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@ scripts:
 ---
 <script type="text/javascript">
 	$(document).ready(function(){
-		$('#hp_images a img').parent().lightBox();
+		$('#hp_images a img').parent().lightBox({
+				overlayBgColor: '#000',
+				overlayOpacity: 0.9,
+				containerResizeSpeed: 450,
+				txtImage: 'Photo',
+   });
 	});
 </script>
 <div id="hp_images">
