fix lightbox on frontpage, add first letter span for articles, and jump p to use in articles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ scripts:
 - /js/photos.js
 - /js/maps.js
 ---
-{% assign selector = '#hp_images a img' %}
+{% assign selector = '#hp_images img' %}
 {% include lightbox.html %}
 
 <div id="hp_images">
