get rid of unneeded div

--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@ scripts:
 {% assign selector = '#hp_images img' %}
 {% include lightbox.html %}
 
-<div id="hp_images">
-	<ul>
-		<li><a><img/></a></li>
-		<li><a><img/></a></li>
-		<li><a><img/></a></li>
-		<li><a><img/></a></li>
-		<li><a><img/></a></li>
-		<li><a><img/></a></li>
-		<li><a><img/></a></li>
-		<li><a><img/></a></li>
-	</ul>
-</div>
+<ul id="hp_images">
+	<li><a><img/></a></li>
+	<li><a><img/></a></li>
+	<li><a><img/></a></li>
+	<li><a><img/></a></li>
+	<li><a><img/></a></li>
+	<li><a><img/></a></li>
+	<li><a><img/></a></li>
+	<li><a><img/></a></li>
+</ul>
 
 <ul class='posts'>
 	{% for page in paginator.posts %}
