move photos.js to photos_home.js

--- a/travel/index.html
+++ b/travel/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Travelling Two
 scripts:
 - /js/photos_json.js
-- /js/photos.js
+- /js/photos_home.js
 - /js/maps.js
 ---
 {% assign selector = '#hp_images img' %}
