updating trips index

--- a/travel/trips/index.html
+++ b/travel/trips/index.html
@@ -1,9 +1,14 @@
 ---
 layout: default
-title: Trips We've Taken 
+title: Our Trips
 ---
 <h2 class="year">2010</h2>
 <ul class="triplist">
+	<li>
+	<a href="/trips/Athens Marathon/">
+		<img src="http://farm5.static.flickr.com/4112/5073219907_162a6e7146_s.jpg">
+		<div>Athens Marathon</div></a>
+	</li>
 	<li>
 	<a href="/trips/NYC Barefoot Run/">
 		<img src="http://farm5.static.flickr.com/4112/5073219907_162a6e7146_s.jpg">
