--- a/travel/trips/index.html
+++ b/travel/trips/index.html
@@ -5,9 +5,9 @@ title: Our Trips
 <h2 class="year">2010</h2>
 <ul class="triplist">
 	<li>
-	<a href="/trips/Athens Marathon/">
-		<img src="http://farm5.static.flickr.com/4112/5073219907_162a6e7146_s.jpg">
-		<div>Athens Marathon</div></a>
+	<a href="/trips/Boston%20Thanksgiving//">
+		<img src="http://farm5.static.flickr.com/4152/cols/72157625352826585_849ee28c3e_s.jpg">
+		<div>Boston Thanksgiving</div></a>
 	</li>
 	<li>
 	<a href="/trips/NYC Barefoot Run/">
