--- a/travel/index.html
+++ b/travel/index.html
@@ -2,12 +2,14 @@
 layout: default
 title: Travelling Two
 scripts:
+- /js/photos_json.js
+- /js/photos_home.js
 - /js/maps.js
 ---
 {% assign selector = '#hp_images img' %}
 {% include lightbox.html %}
 
-<!--<ul id="hp_images">
+<ul id="hp_images">
 	<li><a><img/></a></li>
 	<li><a><img/></a></li>
 	<li><a><img/></a></li>
@@ -16,11 +18,11 @@ scripts:
 	<li><a><img/></a></li>
 	<li><a><img/></a></li>
 	<li><a><img/></a></li>
-</ul>-->
+</ul>
 
 <ul class='posts'>
 	{% for page in paginator.posts %}
-		{%include single_post.html%}
+		{%include single_post_list.html%}
 	{% endfor %}
 </ul>
 
