updated trips.html for now

--- a/travel/trips/index.html
+++ b/travel/trips/index.html
@@ -5,13 +5,15 @@ title: Our Trips
 <h2 class="year">2010</h2>
 <ul class="triplist">
 	<li>
+	<a href="/trips/New%20Years%20In%20Spain/">
+		<div>New Years in Spain</div></a>
+	</li>
+	<li>
 	<a href="/trips/Boston%20Thanksgiving//">
-		<img src="http://farm5.static.flickr.com/4152/cols/72157625352826585_849ee28c3e_s.jpg">
 		<div>Boston Thanksgiving</div></a>
 	</li>
 	<li>
 	<a href="/trips/NYC Barefoot Run/">
-		<img src="http://farm5.static.flickr.com/4153/cols/72157625013658891_665d499dbb_s.jpg">
 		<div>First Ever NYC Barefoot Run</div></a>
 	</li>
 </ul>
